Updated size and spacing for billboard (fixes #81)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -551,7 +551,8 @@ $breadcrumb-ellipse-circle-size: 1.5rem;
 /// billboard (Billboard)
 ///
 
-$billboard-padding: $grid-gutter-width * 2;
+$billboard-padding-x: $grid-gutter-width * 2;
+$billboard-padding-y: $grid-gutter-width;
 
 ///
 /// Carousel
@@ -560,8 +561,8 @@ $billboard-padding: $grid-gutter-width * 2;
 $carousel-text-shadow:                        0 .0625rem .125rem rgba(0,0,0,.6);
 
 $carousel-control-color:                      #fff;
-$carousel-control-width:                      $billboard-padding;
-$carousel-control-font-size:                  1.5rem;
+$carousel-control-width:                      2.5rem;
+$carousel-control-font-size:                  1.25rem;
 
 $carousel-indicator-active-bg:                #fff;
 $carousel-indicator-inactive-bg:              rgba(#fff, .5);
